llvm-trans/libs/LanguageParser.cpp

// Generated from Language.g4 by ANTLR 4.13.0


#include "LanguageVisitor.h"

#include "LanguageParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LanguageParserStaticData final {
  LanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LanguageParserStaticData(const LanguageParserStaticData&) = delete;
  LanguageParserStaticData(LanguageParserStaticData&&) = delete;
  LanguageParserStaticData& operator=(const LanguageParserStaticData&) = delete;
  LanguageParserStaticData& operator=(LanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag languageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LanguageParserStaticData *languageParserStaticData = nullptr;

void languageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (languageParserStaticData != nullptr) {
    return;
  }
#else
  assert(languageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LanguageParserStaticData>(
    std::vector<std::string>{
      "program", "simple_dec", "routine_dec", "var_dec", "type", "arr_type", 
      "parameters", "param_dec", "body", "statement", "return_statement", 
      "if_statement", "for_loop", "rout_call", "arg", "range", "expr", "rel", 
      "sim", "fac", "sum", "prim", "mod", "assign", "prim_type"
    },
    std::vector<std::string>{
      "", "'routine'", "':'", "'is'", "'end'", "'var'", "'array'", "'('", 
      "','", "')'", "'return'", "'if'", "'then'", "'else'", "'for'", "'loop'", 
      "'in'", "'..'", "'and'", "'or'", "'not'", "'<'", "'<='", "'=='", "'!='", 
      "'>='", "'>'", "'+'", "'-'", "'*'", "'%'", "'/'", "'true'", "'false'", 
      "'['", "']'", "':='", "'integer'", "'boolean'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "WS", "IDENT", "INT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  languageParserStaticData = staticData.release();
}

}

LanguageParser::LanguageParser(TokenStream *input) : LanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LanguageParser::LanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *languageParserStaticData->atn, languageParserStaticData->decisionToDFA, languageParserStaticData->sharedContextCache, options);
}

LanguageParser::~LanguageParser() {
  delete _interpreter;
}

const atn::ATN& LanguageParser::getATN() const {
  return *languageParserStaticData->atn;
}

std::string LanguageParser::getGrammarFileName() const {
  return "Language.g4";
}

const std::vector<std::string>& LanguageParser::getRuleNames() const {
  return languageParserStaticData->ruleNames;
}

const dfa::Vocabulary& LanguageParser::getVocabulary() const {
  return languageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LanguageParser::getSerializedATN() const {
  return languageParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::Simple_decContext *> LanguageParser::ProgramContext::simple_dec() {
  return getRuleContexts<LanguageParser::Simple_decContext>();
}

LanguageParser::Simple_decContext* LanguageParser::ProgramContext::simple_dec(size_t i) {
  return getRuleContext<LanguageParser::Simple_decContext>(i);
}

std::vector<LanguageParser::Routine_decContext *> LanguageParser::ProgramContext::routine_dec() {
  return getRuleContexts<LanguageParser::Routine_decContext>();
}

LanguageParser::Routine_decContext* LanguageParser::ProgramContext::routine_dec(size_t i) {
  return getRuleContext<LanguageParser::Routine_decContext>(i);
}


size_t LanguageParser::ProgramContext::getRuleIndex() const {
  return LanguageParser::RuleProgram;
}


std::any LanguageParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::ProgramContext* LanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LanguageParser::T__0

    || _la == LanguageParser::T__4) {
      setState(52);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LanguageParser::T__4: {
          setState(50);
          simple_dec();
          break;
        }

        case LanguageParser::T__0: {
          setState(51);
          routine_dec();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Simple_decContext ------------------------------------------------------------------

LanguageParser::Simple_decContext::Simple_decContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::Var_decContext* LanguageParser::Simple_decContext::var_dec() {
  return getRuleContext<LanguageParser::Var_decContext>(0);
}


size_t LanguageParser::Simple_decContext::getRuleIndex() const {
  return LanguageParser::RuleSimple_dec;
}


std::any LanguageParser::Simple_decContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitSimple_dec(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Simple_decContext* LanguageParser::simple_dec() {
  Simple_decContext *_localctx = _tracker.createInstance<Simple_decContext>(_ctx, getState());
  enterRule(_localctx, 2, LanguageParser::RuleSimple_dec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    var_dec();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Routine_decContext ------------------------------------------------------------------

LanguageParser::Routine_decContext::Routine_decContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::Routine_decContext::IDENT() {
  return getToken(LanguageParser::IDENT, 0);
}

LanguageParser::ParametersContext* LanguageParser::Routine_decContext::parameters() {
  return getRuleContext<LanguageParser::ParametersContext>(0);
}

LanguageParser::TypeContext* LanguageParser::Routine_decContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}

LanguageParser::BodyContext* LanguageParser::Routine_decContext::body() {
  return getRuleContext<LanguageParser::BodyContext>(0);
}


size_t LanguageParser::Routine_decContext::getRuleIndex() const {
  return LanguageParser::RuleRoutine_dec;
}


std::any LanguageParser::Routine_decContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitRoutine_dec(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Routine_decContext* LanguageParser::routine_dec() {
  Routine_decContext *_localctx = _tracker.createInstance<Routine_decContext>(_ctx, getState());
  enterRule(_localctx, 4, LanguageParser::RuleRoutine_dec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(59);
      match(LanguageParser::T__0);
      setState(60);
      match(LanguageParser::IDENT);
      setState(61);
      parameters();
      setState(62);
      match(LanguageParser::T__1);
      setState(63);
      type();
      setState(64);
      match(LanguageParser::T__2);
      setState(65);
      body();
      setState(66);
      match(LanguageParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      match(LanguageParser::T__0);
      setState(69);
      match(LanguageParser::IDENT);
      setState(70);
      parameters();
      setState(71);
      match(LanguageParser::T__2);
      setState(72);
      body();
      setState(73);
      match(LanguageParser::T__3);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_decContext ------------------------------------------------------------------

LanguageParser::Var_decContext::Var_decContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::Var_decContext::IDENT() {
  return getToken(LanguageParser::IDENT, 0);
}

LanguageParser::TypeContext* LanguageParser::Var_decContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}

LanguageParser::ExprContext* LanguageParser::Var_decContext::expr() {
  return getRuleContext<LanguageParser::ExprContext>(0);
}


size_t LanguageParser::Var_decContext::getRuleIndex() const {
  return LanguageParser::RuleVar_dec;
}


std::any LanguageParser::Var_decContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitVar_dec(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Var_decContext* LanguageParser::var_dec() {
  Var_decContext *_localctx = _tracker.createInstance<Var_decContext>(_ctx, getState());
  enterRule(_localctx, 6, LanguageParser::RuleVar_dec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(LanguageParser::T__4);
    setState(78);
    match(LanguageParser::IDENT);
    setState(79);
    match(LanguageParser::T__1);
    setState(80);
    type();
    setState(81);
    match(LanguageParser::T__2);
    setState(82);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

LanguageParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::Prim_typeContext* LanguageParser::TypeContext::prim_type() {
  return getRuleContext<LanguageParser::Prim_typeContext>(0);
}

LanguageParser::Arr_typeContext* LanguageParser::TypeContext::arr_type() {
  return getRuleContext<LanguageParser::Arr_typeContext>(0);
}


size_t LanguageParser::TypeContext::getRuleIndex() const {
  return LanguageParser::RuleType;
}


std::any LanguageParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::TypeContext* LanguageParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, LanguageParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LanguageParser::T__36:
      case LanguageParser::T__37: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        prim_type();
        break;
      }

      case LanguageParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        arr_type();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arr_typeContext ------------------------------------------------------------------

LanguageParser::Arr_typeContext::Arr_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::TypeContext* LanguageParser::Arr_typeContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}


size_t LanguageParser::Arr_typeContext::getRuleIndex() const {
  return LanguageParser::RuleArr_type;
}


std::any LanguageParser::Arr_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitArr_type(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Arr_typeContext* LanguageParser::arr_type() {
  Arr_typeContext *_localctx = _tracker.createInstance<Arr_typeContext>(_ctx, getState());
  enterRule(_localctx, 10, LanguageParser::RuleArr_type);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(LanguageParser::T__5);
    setState(89);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

LanguageParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::Param_decContext *> LanguageParser::ParametersContext::param_dec() {
  return getRuleContexts<LanguageParser::Param_decContext>();
}

LanguageParser::Param_decContext* LanguageParser::ParametersContext::param_dec(size_t i) {
  return getRuleContext<LanguageParser::Param_decContext>(i);
}


size_t LanguageParser::ParametersContext::getRuleIndex() const {
  return LanguageParser::RuleParameters;
}


std::any LanguageParser::ParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitParameters(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::ParametersContext* LanguageParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 12, LanguageParser::RuleParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(91);
      match(LanguageParser::T__6);
      setState(92);
      param_dec();
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LanguageParser::T__7) {
        setState(93);
        match(LanguageParser::T__7);
        setState(94);
        param_dec();
      }
      setState(97);
      match(LanguageParser::T__8);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(99);
      match(LanguageParser::T__6);
      setState(100);
      match(LanguageParser::T__8);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_decContext ------------------------------------------------------------------

LanguageParser::Param_decContext::Param_decContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::Param_decContext::IDENT() {
  return getToken(LanguageParser::IDENT, 0);
}

LanguageParser::TypeContext* LanguageParser::Param_decContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}


size_t LanguageParser::Param_decContext::getRuleIndex() const {
  return LanguageParser::RuleParam_dec;
}


std::any LanguageParser::Param_decContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitParam_dec(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Param_decContext* LanguageParser::param_dec() {
  Param_decContext *_localctx = _tracker.createInstance<Param_decContext>(_ctx, getState());
  enterRule(_localctx, 14, LanguageParser::RuleParam_dec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(LanguageParser::IDENT);
    setState(104);
    match(LanguageParser::T__1);
    setState(105);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

LanguageParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LanguageParser::Simple_decContext *> LanguageParser::BodyContext::simple_dec() {
  return getRuleContexts<LanguageParser::Simple_decContext>();
}

LanguageParser::Simple_decContext* LanguageParser::BodyContext::simple_dec(size_t i) {
  return getRuleContext<LanguageParser::Simple_decContext>(i);
}

std::vector<LanguageParser::StatementContext *> LanguageParser::BodyContext::statement() {
  return getRuleContexts<LanguageParser::StatementContext>();
}

LanguageParser::StatementContext* LanguageParser::BodyContext::statement(size_t i) {
  return getRuleContext<LanguageParser::StatementContext>(i);
}

std::vector<LanguageParser::Return_statementContext *> LanguageParser::BodyContext::return_statement() {
  return getRuleContexts<LanguageParser::Return_statementContext>();
}

LanguageParser::Return_statementContext* LanguageParser::BodyContext::return_statement(size_t i) {
  return getRuleContext<LanguageParser::Return_statementContext>(i);
}


size_t LanguageParser::BodyContext::getRuleIndex() const {
  return LanguageParser::RuleBody;
}


std::any LanguageParser::BodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitBody(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::BodyContext* LanguageParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 16, LanguageParser::RuleBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1116691516448) != 0)) {
      setState(110);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LanguageParser::T__4: {
          setState(107);
          simple_dec();
          break;
        }

        case LanguageParser::T__10:
        case LanguageParser::T__13:
        case LanguageParser::T__33:
        case LanguageParser::IDENT: {
          setState(108);
          statement();
          break;
        }

        case LanguageParser::T__9: {
          setState(109);
          return_statement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

LanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::AssignContext* LanguageParser::StatementContext::assign() {
  return getRuleContext<LanguageParser::AssignContext>(0);
}

LanguageParser::If_statementContext* LanguageParser::StatementContext::if_statement() {
  return getRuleContext<LanguageParser::If_statementContext>(0);
}

LanguageParser::For_loopContext* LanguageParser::StatementContext::for_loop() {
  return getRuleContext<LanguageParser::For_loopContext>(0);
}

LanguageParser::Rout_callContext* LanguageParser::StatementContext::rout_call() {
  return getRuleContext<LanguageParser::Rout_callContext>(0);
}


size_t LanguageParser::StatementContext::getRuleIndex() const {
  return LanguageParser::RuleStatement;
}


std::any LanguageParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::StatementContext* LanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, LanguageParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(115);
      assign();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(116);
      if_statement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(117);
      for_loop();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(118);
      rout_call();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Return_statementContext ------------------------------------------------------------------

LanguageParser::Return_statementContext::Return_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::ExprContext* LanguageParser::Return_statementContext::expr() {
  return getRuleContext<LanguageParser::ExprContext>(0);
}


size_t LanguageParser::Return_statementContext::getRuleIndex() const {
  return LanguageParser::RuleReturn_statement;
}


std::any LanguageParser::Return_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitReturn_statement(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::Return_statementContext* LanguageParser::return_statement() {
  Return_statementContext *_localctx = _tracker.createInstance<Return_statementContext>(_ctx, getState());
  enterRule(_localctx, 20, LanguageParser::RuleReturn_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(LanguageParser::T__9);
    setState(122);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

LanguageParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::ExprContext* LanguageParser::If_statementContext::expr() {
  return getRuleContext<LanguageParser::ExprContext>(0);
}

std::vector<LanguageParser::BodyContext *> LanguageParser::If_statementContext::body() {
  return getRuleContexts<LanguageParser::BodyContext>();
}

LanguageParser::BodyContext* LanguageParser::If_statementContext::body(size_t i) {
  return getRuleContext<LanguageParser::BodyContext>(i);
}


size_t LanguageParser::If_statementContext::getRuleIndex() const {
  return LanguageParser::RuleIf_statement;
}


std::any LanguageParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::If_statementContext* LanguageParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 22, LanguageParser::RuleIf_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(138);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(124);
      match(LanguageParser::T__10);
      setState(125);
      expr();
      setState(126);
      match(LanguageParser::T__11);
      setState(127);
      body();
      setState(128);
      match(LanguageParser::T__12);
      setState(129);
      body();
      setState(130);
      match(LanguageParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(132);
      match(LanguageParser::T__10);
      setState(133);
      expr();
      setState(134);
      match(LanguageParser::T__11);
      setState(135);
      body();
      setState(136);
      match(LanguageParser::T__3);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- For_loopContext ------------------------------------------------------------------

LanguageParser::For_loopContext::For_loopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::For_loopContext::IDENT() {
  return getToken(LanguageParser::IDENT, 0);
}

LanguageParser::RangeContext* LanguageParser::For_loopContext::range() {
  return getRuleContext<LanguageParser::RangeContext>(0);
}

LanguageParser::BodyContext* LanguageParser::For_loopContext::body() {
  return getRuleContext<LanguageParser::BodyContext>(0);
}


size_t LanguageParser::For_loopContext::getRuleIndex() const {
  return LanguageParser::RuleFor_loop;
}


std::any LanguageParser::For_loopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitFor_loop(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::For_loopContext* LanguageParser::for_loop() {
  For_loopContext *_localctx = _tracker.createInstance<For_loopContext>(_ctx, getState());
  enterRule(_localctx, 24, LanguageParser::RuleFor_loop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(LanguageParser::T__13);
    setState(141);
    match(LanguageParser::IDENT);
    setState(142);
    range();
    setState(143);
    match(LanguageParser::T__14);
    setState(144);
    body();
    setState(145);
    match(LanguageParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rout_callContext ------------------------------------------------------------------

LanguageParser::Rout_callContext::Rout_callContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LanguageParser::Rout_callContext::IDENT() {
  return getToken(LanguageParser::IDENT, 0);
}

std::vector<LanguageParser::ArgContext *> LanguageParser::Rout_callContext::arg() {
  return getRuleContexts<LanguageParser::ArgContext>();
}

LanguageParser::ArgContext* LanguageParser::Rout_callContext::arg(size_t i) {
  return getRuleContext<LanguageParser::ArgContext>(i);
}


size_t LanguageParser::Rout_callContext::getRuleIndex() const {
  return LanguageParser::RuleRout_call;
}


std::any LanguageParser::Rout_callContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitRout_call(this);
  else
    return visitor->visitChildren(this);
}
